hw 4 implementation: fixing ui alignment bugs

--- a/hw1/data-vilij/resources/css/chart.css
+++ b/hw1/data-vilij/resources/css/chart.css
@@ -37,7 +37,7 @@
     -fx-stroke: grey;
 }
 
-#listheading{
+#list-heading{
      -fx-background-color: black;
      -fx-padding: 5 10 5 5;
      -fx-text-fill: white;
